--- a/style.css
+++ b/style.css
@@ -948,6 +948,35 @@ li:hover{
     .last-part{
         height: 600px;
     }
+        .part3{
+        margin-left: 20px;
+    }
+    .part2{
+        margin-left: 20px;
+    }
+    .part4{
+        width: 250px;
+    }
+
+    .comment-box1{
+        width: 250px;
+        margin-left: 20px;
+        height: 400px;
+    }
+
+    .comment-box2{
+        width: 250px;
+        margin-left: 20px;
+        margin-top: 50px;
+        height: 400px;
+    }
+
+    .comment-box3{
+        width: 250px;
+        margin-left: 20px;
+        margin-top: 50px;
+        height: 400px;
+    }
 }
 
 @media screen and (max-width: 351px) {
