--- a/style.css
+++ b/style.css
@@ -909,13 +909,13 @@ li:hover{
     }
 
     .img-left-header{
-        width: 100px;
-        height: 100px;
+        width: 300px;
+        height: 300px;
         margin-left: 10px;
     }
 
     .logo-prof{
-        margin-left: 50px;
+        margin-left: 180px;
     }
 
     .btn-header{
@@ -976,6 +976,9 @@ li:hover{
         margin-left: 20px;
         margin-top: 50px;
         height: 400px;
+    }
+    .header-left{
+        width: 348px;
     }
 }
 
