--- a/style.css
+++ b/style.css
@@ -1011,10 +1011,10 @@ li:hover{
     }
     .last-part{
         height: 600px;
-        width: 300px;
+        width: 350px;
     }
     .part3{
-        margin-left: 0;
+        margin-left: 15px;
     }
     .left-part3{
         width: 300px;
@@ -1032,10 +1032,10 @@ li:hover{
         margin-left: 0px;
     }
     .left-part2{
-        margin-left: 0;
+        margin-left: 20px;
     }
     .right-part2{
-        margin-left: 0;
+        margin-left: 20px;
     }
     .part4{
         width: 300px;
@@ -1064,7 +1064,7 @@ li:hover{
         width: 348px;
     }
     .image-last-part{
-        display: none;
+        display: block;
     }
 }
 
