--- a/content.css
+++ b/content.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(images/پروفایل-قهوه-ی-جادویی-شیک-و-دیدنی.jpg);
+    background-image: url(پروفایل-قهوه-ی-جادویی-شیک-و-دیدنی.jpg);
 }
 
 .container{
