--- a/style.css
+++ b/style.css
@@ -1014,6 +1014,7 @@ li:hover{
         width: 350px;
     }
     .part3{
+        
         margin-left: 20px;
     }
     .left-part3{
@@ -1030,6 +1031,7 @@ li:hover{
         margin-left: 45px;
     }
     .part2{
+        margin-top: 60px;
         margin-left: 0px;
     }
     .left-part2{
@@ -1041,6 +1043,7 @@ li:hover{
         height: 450px;
     }
     .part4{
+        margin-top: 60px;
         width: 300px;
     }
 
